test/errors/type/collections/set/__le.yasl
echo mt.lookup(collections.set(), .__le)(collections.set(), true)
